--- a/Tools/Dt/Dt.csproj
+++ b/Tools/Dt/Dt.csproj
@@ -217,6 +217,21 @@
     <Compile Include="ManyToMany\ManyToManyForm.Designer.cs">
       <DependentUpon>ManyToManyForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Mv\BlankMv.xaml.cs">
+      <DependentUpon>BlankMv.xaml</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mv\FormMv.xaml.cs">
+      <DependentUpon>FormMv.xaml</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mv\ListMv.xaml.cs">
+      <DependentUpon>ListMv.xaml</DependentUpon>
+    </EmbeddedResource>
+    <Compile Include="Mv\InsertMvForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Mv\InsertMvForm.Designer.cs">
+      <DependentUpon>InsertMvForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="OnToMany\OnToManyForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -230,6 +245,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Entity\InsertEntityForm.resx">
       <DependentUpon>InsertEntityForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mv\InsertMvForm.resx">
+      <DependentUpon>InsertMvForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Win\ToggleMainWin.xaml.cs">
       <DependentUpon>ToggleMainWin.xaml</DependentUpon>
@@ -445,6 +463,23 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Dialog\Dialog.xaml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mv\BlankMv.xaml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mv\FormMv.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mv\ListMv.xaml">
+      <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
