--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -50,9 +50,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.8.13" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.0.0-dev.132" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.0.0-dev.132" PrivateAssets="all" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.10.11" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.0.0" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.0.0" PrivateAssets="all" />
     <!-- 升级wasmsdk压缩包后第一次生成时需要引用该包，生成后将dotnet.js、dotnet.wasm替换wasmsdk压缩包的同名文件，再次build不需引用该包，节约时间 -->
     <!--<PackageReference Include="Uno.sqlite-wasm" Version="3.34.1.3" />-->
   </ItemGroup>
