--- a/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
+++ b/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
@@ -68,9 +68,6 @@
       <Link>App.xaml.cs</Link>
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="..\Common\Stub.cs">
-      <Link>Stub.cs</Link>
-    </Compile>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -91,10 +88,12 @@
   <ItemGroup>
     <PackageReference Include="Uno.UI" Version="3.10.11" />
     <PackageReference Include="Dt.Cells" Version="2.0.0" />
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.1.0" />
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.3.1.1" />
     <!-- 不引用会造成缺少Xamarin.Kotlin.StdLib库，确保和Dt.Core中的版本一致 -->
     <PackageReference Include="Square.OkHttp3" Version="4.9.0" />
     <PackageReference Include="Square.OkIO" version="2.8.0" />
+    <!-- 因WorkManager后台任务添加的引用 -->
+    <PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.6.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dt.App\Dt.App.csproj">
