--- a/Client/Common/Dtc.props
+++ b/Client/Common/Dtc.props
@@ -1,7 +1,5 @@
 <Project ToolsVersion="Current">
   <PropertyGroup>
-    <!-- 生成Dt.Client包时为true -->
-    <GeneratePackage>false</GeneratePackage>  
     <TargetFramework Condition=" '$(SolutionFileName)' == 'Dtc-Uwp.sln' ">uap10.0.18362</TargetFramework>
     <!-- 加uap为xaml智能提示 -->
     <TargetFrameworks Condition=" '$(SolutionFileName)' == 'Dtc-Android.sln' ">uap10.0.18362;monoandroid11.0</TargetFrameworks>
@@ -38,11 +36,11 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(GeneratePackage)' != 'true' ">
+  <ItemGroup Condition=" '$(SolutionFileName)' != 'Dtc-All.sln' ">
     <PackageReference Include="Dt.Cells" Version="2.0.0" />
   </ItemGroup> 
 
-  <ItemGroup Condition="'$(GeneratePackage)' == 'true' ">
+  <ItemGroup Condition=" '$(SolutionFileName)' == 'Dtc-All.sln' ">
     <!--生成Dt.Client包、修改Excel或Chart时-->
     <ProjectReference Include="..\Dt.CalcEngine\Dt.CalcEngine.csproj" PrivateAssets="all" />
     <ProjectReference Include="..\Dt.Xls\Dt.Xls.csproj" PrivateAssets="all" />
@@ -52,7 +50,7 @@
     <ProjectReference Include="..\Dt.Cells\Dt.Cells.csproj" PrivateAssets="all" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(GeneratePackage)' == 'true' and '$(TargetFramework)' == 'uap10.0.18362' ">
+  <ItemGroup Condition=" '$(SolutionFileName)' == 'Dtc-All.sln' and '$(TargetFramework)' == 'uap10.0.18362' ">
     <ProjectReference Include="..\Dt.Tasks\Dt.Tasks.csproj" PrivateAssets="all" />
   </ItemGroup>
   
