--- a/.gitignore
+++ b/.gitignore
@@ -365,4 +365,5 @@ Client/Dt.Base/Dt.Base.xml
 Client/Dt.App/Dt.App.xml
 Service/src/Dt.Core/Dt.Core.xml
 Service/src/Dt.Cm/Dt.Cm.xml
+Doc/商店截图/
 gitconfig.txt
