--- a/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
+++ b/Client/Dt.Shell.Droid/Dt.Shell.Droid.csproj
@@ -11,7 +11,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Dt.Shell</RootNamespace>
-    <AssemblyName>Dt.Shell.Droid</AssemblyName>
+    <AssemblyName>Dt.Sample.Shell</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
@@ -88,6 +88,7 @@
     <PackageReference Include="Uno.UI" Version="3.10.11" />
     <PackageReference Include="Dt.Cells" Version="2.0.0" />
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.3.1.1" />
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.3" />
     <!-- 不引用会造成缺少Xamarin.Kotlin.StdLib库，确保和Dt.Core中的版本一致 -->
     <PackageReference Include="Square.OkHttp3" Version="4.9.0" />
     <PackageReference Include="Square.OkIO" version="2.8.0" />
