--- a/Client/Dt.Shell.Droid/Properties/AndroidManifest.xml
+++ b/Client/Dt.Shell.Droid/Properties/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           android:versionCode="1"
           android:versionName="1.0"
-          package="Dt.Shell.Droid"
+          package="com.dt.samples"
           android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
