uwp版发布到商店

--- a/Client/Common/Dtc.props
+++ b/Client/Common/Dtc.props
@@ -50,7 +50,7 @@
     <ProjectReference Include="..\Dt.Cells\Dt.Cells.csproj" PrivateAssets="all" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(SolutionFileName)' == 'Dtc-All.sln' and '$(TargetFramework)' == 'uap10.0.18362' ">
+  <ItemGroup Condition=" '$(SolutionFileName)' == 'Dtc-All.sln' and '$(TargetFramework)' == 'uap10.0.18362' and '$(Configuration)'=='Debug'">
     <ProjectReference Include="..\Dt.Tasks\Dt.Tasks.csproj" PrivateAssets="all" />
   </ItemGroup>
   
