--- a/Client/Dt.Shell.Uwp/Dt.Shell.Uwp.csproj
+++ b/Client/Dt.Shell.Uwp/Dt.Shell.Uwp.csproj
@@ -122,6 +122,9 @@
     <Content Include="Properties\Default.rd.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Dt.Tasks">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.11</Version>
     </PackageReference>
@@ -148,12 +151,6 @@
     <ProjectReference Include="..\Dt.Sample\Dt.Sample.csproj">
       <Project>{25744ee1-b117-4141-b9a8-5ca1cbebcd98}</Project>
       <Name>Dt.Sample</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup Condition=" '$(SolutionFileName)' == 'Dtc-All.sln' and '$(Configuration)'=='Release'">
-    <ProjectReference Include="..\Dt.Tasks\Dt.Tasks.csproj">
-      <Project>{2803AD47-0438-446F-8EEC-5BE5371849E4}</Project>
-      <Name>Dt.Tasks</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
