--- a/Client/Common/Dtc-Stable.props
+++ b/Client/Common/Dtc-Stable.props
@@ -1,10 +1,9 @@
 <Project ToolsVersion="Current">
   <PropertyGroup>
     <TargetFrameworks>uap10.0.18362;monoandroid11.0;xamarinios10;net5.0</TargetFrameworks>
-    <Authors>hdt</Authors>
-    <Product>DT业务基础平台</Product>
-    <Copyright>Copyright © 2020</Copyright>
-    <Version>2.0.0</Version>
+    <Authors>Daoting</Authors>
+    <Product>搬运工基础平台</Product>
+    <Copyright>Copyright © 2021</Copyright>
     <NoWarn>$(NoWarn);1591;NU1701;Uno0001</NoWarn>
     <!-- Ensures the .xr.xml files are generated in a proper layout folder -->
     <GenerateLibraryLayout>true</GenerateLibraryLayout>
