--- a/Client/Common/Dtc.props
+++ b/Client/Common/Dtc.props
@@ -6,9 +6,9 @@
     <TargetFrameworks Condition=" '$(SolutionFileName)' == 'Dtc-iOS.sln' ">uap10.0.18362;xamarinios10</TargetFrameworks>
     <TargetFrameworks Condition=" '$(SolutionFileName)' == 'Dtc-Wasm.sln' ">uap10.0.18362;net5.0</TargetFrameworks>
     <TargetFrameworks Condition=" '$(SolutionFileName)' == 'Dtc-All.sln' ">uap10.0.18362;monoandroid11.0;xamarinios10;net5.0</TargetFrameworks>
-    <Authors>hdt</Authors>
-    <Product>DT业务基础平台</Product>
-    <Copyright>Copyright © 2020</Copyright>
+    <Authors>Daoting</Authors>
+    <Product>搬运工基础平台</Product>
+    <Copyright>Copyright © 2021</Copyright>
     <NoWarn>$(NoWarn);1591;NU1701;Uno0001</NoWarn>
     <!-- Ensures the .xr.xml files are generated in a proper layout folder -->
     <GenerateLibraryLayout>true</GenerateLibraryLayout>
