Dot中string空时不显示, win模式Win切换主区时若保存布局后再加载布局错误

--- a/Client/Dt.App/Dt.App.csproj
+++ b/Client/Dt.App/Dt.App.csproj
@@ -4,7 +4,7 @@
     <PackageId>Dt.Client</PackageId>
     <Description>搬运工客户端基础包</Description>    <!--将引用的项目合并打包-->
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
-    <Version>1.9.10-dev.1</Version>
+    <Version>1.9.10-dev</Version>
   </PropertyGroup>
 
   <PropertyGroup>
