--- a/Service/src/Dt.Pub/Dt.Pub.csproj
+++ b/Service/src/Dt.Pub/Dt.Pub.csproj
@@ -1,22 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;1705;1591</NoWarn>
-    <DocumentationFile>bin\Debug\net5.0\Dt.Pub.xml</DocumentationFile>
-  </PropertyGroup>
+	<ItemGroup>
+		<Using Include="Dt.Core" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Include="..\..\k8s\global.json" Link="etc\config\global.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  
-  <ItemGroup>
-    <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
-  </ItemGroup>
-  
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<NoWarn>1701;1702;1705;1591</NoWarn>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<NoWarn>1701;1702;1705;1591</NoWarn>
+	</PropertyGroup>
+	
+	<ItemGroup>
+		<Content Include="..\..\k8s\global.json" Link="etc\config\global.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
+	</ItemGroup>
+
 </Project>
