--- a/Service/src/Dt.Pub/Dt.Pub.csproj
+++ b/Service/src/Dt.Pub/Dt.Pub.csproj
@@ -4,6 +4,8 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<AssemblyVersion>1.2.0</AssemblyVersion>
+		<FileVersion>1.2.0</FileVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
