--- a/Client/Dt.App/Dt.App.csproj
+++ b/Client/Dt.App/Dt.App.csproj
@@ -1,42 +1,43 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras/3.0.22">
+﻿<Project Sdk="MSBuild.Sdk.Extras/3.0.38">
 
-  <PropertyGroup>
-    <PackageId>Dt.Client</PackageId>
-    <Description>搬运工客户端基础包</Description>    <!--将引用的项目合并打包-->
-    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
-    <Version>1.9.10-dev</Version>
-  </PropertyGroup>
+	<PropertyGroup>
+		<PackageId>Dt.Client</PackageId>
+		<Description>搬运工客户端基础包</Description>
+		<!--将引用的项目合并打包-->
+		<TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
+		<Version>1.9.10-dev</Version>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+	</PropertyGroup>
 
-  <PropertyGroup>
-    <DocumentationFile>D:\Dt\Client\Dt.App\Dt.App.xml</DocumentationFile>
-    <Authors>Daoting</Authors>
-    <Product>搬运工基础平台</Product>
-    <PackageProjectUrl>https://github.com/daoting/dt</PackageProjectUrl>
-    <PackageIcon>logo.png</PackageIcon>
-    <PackageIconUrl />
-    <PackageTags>搬运工 WinUI UWP Uno Platform</PackageTags>
-  </PropertyGroup>
+	<PropertyGroup>
+		<Authors>Daoting</Authors>
+		<Product>搬运工基础平台</Product>
+		<PackageProjectUrl>https://github.com/daoting/dt</PackageProjectUrl>
+		<PackageIcon>logo.png</PackageIcon>
+		<PackageIconUrl />
+		<PackageTags>搬运工 WinUI UWP Uno Platform</PackageTags>
+	</PropertyGroup>
 
-  <Import Project="..\Common\dtc.props" />
+	<Import Project="..\Common\dtc.props" />
 
-  <ItemGroup>
-    <None Include="..\..\logo.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-    <None Include="..\Common\实体类模板.txt" Link="实体类模板.txt" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\..\logo.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+		<None Include="..\Common\实体类模板.txt" Link="实体类模板.txt" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" PrivateAssets="all" />
-    <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" PrivateAssets="all" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Dt.Core\Dt.Core.csproj" PrivateAssets="all" />
+		<ProjectReference Include="..\Dt.Base\Dt.Base.csproj" PrivateAssets="all" />
+	</ItemGroup>
 
-  <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
-    <ItemGroup>
-      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
-      <!--uwp包含引用项目的xbf文件-->
-      <TfmSpecificPackageFile Include="@(_LayoutFile)" PackagePath="lib\$(TargetFramework)\%(_LayoutFile.TargetPath)" Condition="'$(TargetFramework)' == 'uap10.0.18362'" />
-    </ItemGroup>
-  </Target>
+	<Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
+		<ItemGroup>
+			<BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference'))" />
+			<!--uwp包含引用项目的xbf文件-->
+			<TfmSpecificPackageFile Include="@(_LayoutFile)" PackagePath="lib\$(TargetFramework)\%(_LayoutFile.TargetPath)" Condition="'$(TargetFramework)' == 'uap10.0.19041'" />
+		</ItemGroup>
+	</Target>
 </Project>
