--- a/UWP/Dt.Shell.Uwp/Dt.Shell.Uwp.csproj
+++ b/UWP/Dt.Shell.Uwp/Dt.Shell.Uwp.csproj
@@ -154,7 +154,7 @@
 		</ProjectReference>
 	</ItemGroup>
 	<ItemGroup>
-		<Content Include="..\Common\Fonts\icon.ttf">
+		<Content Include="..\..\Common\Fonts\icon.ttf">
 			<Link>Assets\Fonts\icon.ttf</Link>
 		</Content>
 	</ItemGroup>
