--- a/UWP/Dt.Shell.iOS/Dt.Shell.iOS.csproj
+++ b/UWP/Dt.Shell.iOS/Dt.Shell.iOS.csproj
@@ -82,7 +82,7 @@
 		<BundleResource Include="Assets\SplashScreen%402x.png" />
 		<BundleResource Include="Assets\SplashScreen%403x.png" />
 		<BundleResource Include="Assets\logo.png" />
-		<BundleResource Include="..\Common\Fonts\uno-fluentui-assets.ttf">
+		<BundleResource Include="..\..\Common\Fonts\uno-fluentui-assets.ttf">
 			<Link>Assets\Fonts\uno-fluentui-assets.ttf</Link>
 		</BundleResource>
 		<None Include="iOS说明.txt" />
@@ -114,7 +114,7 @@
 			<Visible>false</Visible>
 		</ImageAsset>
 		<Content Include="Entitlements.plist" />
-		<BundleResource Include="..\Common\Fonts\icon.ttf">
+		<BundleResource Include="..\..\Common\Fonts\icon.ttf">
 			<Link>Assets\Fonts\icon.ttf</Link>
 		</BundleResource>
 		<None Include="Info.plist">
