--- a/UWP/Dt.App/Dt.App.csproj
+++ b/UWP/Dt.App/Dt.App.csproj
@@ -5,7 +5,7 @@
 		<Description>搬运工客户端基础包</Description>
 		<!--将引用的项目合并打包-->
 		<TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
-		<Version>1.9.10-dev</Version>
+		<Version>1.9.11</Version>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 
@@ -21,7 +21,7 @@
 	<Import Project="..\Common\dtc.props" />
 
 	<ItemGroup>
-	  <Content Include="..\..\Service\src\Dt.Cm\实体类模板.txt" Link="实体类模板.txt" />
+	  <None Include="..\..\Common\实体类模板.txt" Link="实体类模板.txt" />
 	</ItemGroup>
 
 	<ItemGroup>
